{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 386,
  "lineage": "acb79e56-e180-b882-760c-1c0856a8b11f",
  "resources": [
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:security-group/sg-018dba8119cf2b873",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018dba8119cf2b873",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0adce5c34e7acacbb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "smarthome-dev-db-sg",
            "name_prefix": "",
            "owner_id": "023487919036",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "timeouts": null,
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.ecs.aws_security_group.ecs_tasks",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:loadbalancer/app/smarthome-dev-alb/abceed9a38dd4d92",
            "arn_suffix": "app/smarthome-dev-alb/abceed9a38dd4d92",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "smarthome-dev-alb-227170329.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:023487919036:loadbalancer/app/smarthome-dev-alb/abceed9a38dd4d92",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "smarthome-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05f304616878b73e1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04fca90574c871d01"
              },
              {
                "subnet_id": "subnet-0c0227cfa3eef3e52"
              }
            ],
            "subnets": [
              "subnet-04fca90574c871d01",
              "subnet-0c0227cfa3eef3e52"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "vpc_id": "vpc-0761dcfd6e80ae53c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "application/json",
                    "message_body": "{\"status\": \"healthy\", \"platform\": \"SmartHome Hub\"}",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:loadbalancer/app/smarthome-dev-alb/abceed9a38dd4d92",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "analytics-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-analytics-service/646f87df66fdf67b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener-rule/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6/cb9e2f5ab9ea70c4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/analytics",
                      "/api/v1/analytics/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener-rule/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6/cb9e2f5ab9ea70c4",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6",
            "priority": 100,
            "tags": null,
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_target_group.services",
            "module.ecs.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "automation-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-automation-service/28e6f7a302888f79",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener-rule/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6/3bcc01a08aa0167b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/automation",
                      "/api/v1/automation/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener-rule/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6/3bcc01a08aa0167b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6",
            "priority": 101,
            "tags": null,
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_target_group.services",
            "module.ecs.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "device-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-device-service/8f61d878004f9a69",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener-rule/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6/af2466dd6261b558",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/device",
                      "/api/v1/device/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener-rule/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6/af2466dd6261b558",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6",
            "priority": 102,
            "tags": null,
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_target_group.services",
            "module.ecs.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "user-service",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-user-service/cf217d0254d49405",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener-rule/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6/c73fadf981872a08",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/user",
                      "/api/v1/user/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener-rule/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6/c73fadf981872a08",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:listener/app/smarthome-dev-alb/abceed9a38dd4d92/b4f5eae7236cbde6",
            "priority": 103,
            "tags": null,
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_target_group.services",
            "module.ecs.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "analytics-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-analytics-service/646f87df66fdf67b",
            "arn_suffix": "targetgroup/smarthome-dev-analytics-service/646f87df66fdf67b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-analytics-service/646f87df66fdf67b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "smarthome-dev-analytics-service",
            "port": 8004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "automation-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-automation-service/28e6f7a302888f79",
            "arn_suffix": "targetgroup/smarthome-dev-automation-service/28e6f7a302888f79",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-automation-service/28e6f7a302888f79",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "smarthome-dev-automation-service",
            "port": 8002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "device-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-device-service/8f61d878004f9a69",
            "arn_suffix": "targetgroup/smarthome-dev-device-service/8f61d878004f9a69",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-device-service/8f61d878004f9a69",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "smarthome-dev-device-service",
            "port": 8001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": "user-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-user-service/cf217d0254d49405",
            "arn_suffix": "targetgroup/smarthome-dev-user-service/cf217d0254d49405",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:023487919036:targetgroup/smarthome-dev-user-service/cf217d0254d49405",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "smarthome-dev-user-service",
            "port": 8003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:security-group/sg-05f304616878b73e1",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f304616878b73e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "smarthome-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "023487919036",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "timeouts": null,
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:security-group/sg-0adce5c34e7acacbb",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adce5c34e7acacbb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f304616878b73e1"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "smarthome-dev-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "023487919036",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "timeouts": null,
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.alb",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054458d640bedc276",
            "arn": "arn:aws:ec2:us-east-1:023487919036:elastic-ip/eipalloc-054458d640bedc276",
            "domain": "vpc",
            "id": "eipalloc-054458d640bedc276",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-197-52-250.compute-1.amazonaws.com",
            "public_ip": "34.197.52.250",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "smarthome-dev-nat-eip",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "smarthome-dev-nat-eip",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:internet-gateway/igw-0c7718c28fb487d6d",
            "id": "igw-0c7718c28fb487d6d",
            "owner_id": "023487919036",
            "tags": {
              "Environment": "dev",
              "Name": "smarthome-dev-igw",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "smarthome-dev-igw",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054458d640bedc276",
            "association_id": "eipassoc-03dd6ab69c89cd093",
            "connectivity_type": "public",
            "id": "nat-0e0e88819a8beb1bd",
            "network_interface_id": "eni-0f98b73e54c18f732",
            "private_ip": "10.0.0.237",
            "public_ip": "34.197.52.250",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04fca90574c871d01",
            "tags": {
              "Environment": "dev",
              "Name": "smarthome-dev-nat",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "smarthome-dev-nat",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:route-table/rtb-02d73095ece135fbb",
            "id": "rtb-02d73095ece135fbb",
            "owner_id": "023487919036",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e0e88819a8beb1bd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "smarthome-dev-private-rt",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "smarthome-dev-private-rt",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "timeouts": null,
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:route-table/rtb-06f7b9b12b8279fad",
            "id": "rtb-06f7b9b12b8279fad",
            "owner_id": "023487919036",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7718c28fb487d6d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "smarthome-dev-public-rt",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "smarthome-dev-public-rt",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "timeouts": null,
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0261b76160b2bbc89",
            "route_table_id": "rtb-02d73095ece135fbb",
            "subnet_id": "subnet-0ef7ec56ffcf5eb0c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083f8a510942b0a1d",
            "route_table_id": "rtb-02d73095ece135fbb",
            "subnet_id": "subnet-05681b4e4a3e040f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066d10b028ba4f550",
            "route_table_id": "rtb-06f7b9b12b8279fad",
            "subnet_id": "subnet-04fca90574c871d01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b59c00cd59f15c11",
            "route_table_id": "rtb-06f7b9b12b8279fad",
            "subnet_id": "subnet-0c0227cfa3eef3e52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:subnet/subnet-0ef7ec56ffcf5eb0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef7ec56ffcf5eb0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023487919036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "smarthome-dev-private-1",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass",
              "Type": "Private"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "smarthome-dev-private-1",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass",
              "Type": "Private"
            },
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:subnet/subnet-05681b4e4a3e040f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05681b4e4a3e040f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "023487919036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "smarthome-dev-private-2",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass",
              "Type": "Private"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "smarthome-dev-private-2",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass",
              "Type": "Private"
            },
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:subnet/subnet-04fca90574c871d01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fca90574c871d01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "023487919036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "smarthome-dev-public-1",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass",
              "Type": "Public"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "smarthome-dev-public-1",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass",
              "Type": "Public"
            },
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:subnet/subnet-0c0227cfa3eef3e52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0227cfa3eef3e52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "023487919036",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "smarthome-dev-public-2",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass",
              "Type": "Public"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "smarthome-dev-public-2",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass",
              "Type": "Public"
            },
            "vpc_id": "vpc-0761dcfd6e80ae53c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023487919036:vpc/vpc-0761dcfd6e80ae53c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bfd58b166f4d819b",
            "default_route_table_id": "rtb-0ca8c0f5287071a84",
            "default_security_group_id": "sg-06e5a66a581a588ad",
            "dhcp_options_id": "dopt-0bc3dd4985524dfd0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0761dcfd6e80ae53c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca8c0f5287071a84",
            "owner_id": "023487919036",
            "tags": {
              "Environment": "dev",
              "Name": "smarthome-dev-vpc",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            },
            "tags_all": {
              "Course": "CloudComputing",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "smarthome-dev-vpc",
              "Project": "SmartHomePlatform",
              "Team": "CloudComputingClass"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}